--- a/app/src/main/res/layout/item_tv_show.xml
+++ b/app/src/main/res/layout/item_tv_show.xml
@@ -18,6 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:adjustViewBounds="true"
+            android:cropToPadding="true"
             android:maxWidth="150dp"
             android:maxHeight="150dp"
             tools:srcCompat="@drawable/placeholder_image" />
